--- a/react-native-trash/package.json
+++ b/react-native-trash/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.9",
+    "expo-camera": "~12.3.0",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.16",
     "react": "18.0.0",
     "react-dom": "^18.2.0",
     "react-native": "0.69.5",
