Integrated image in different comps

--- a/react-native-trash/.eslintrc
+++ b/react-native-trash/.eslintrc
@@ -18,6 +18,9 @@
         "react-native"
     ],
     "rules": {
-        "no-unused-vars": "warn"
+        "no-unused-vars": "warn",
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off",
+        "react/prop-types": 0
     }
 }
