--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.29.3",
     "env-cmd": "^10.1.0",
     "mapbox-gl": "^2.10.0",
+    "maplibre-gl": "^2.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-div-100vh": "^0.7.0",
