--- a/react-native-trash/package.json
+++ b/react-native-trash/package.json
@@ -14,8 +14,12 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.9",
+    "expo-auth-session": "~3.7.1",
     "expo-camera": "~12.3.0",
+    "expo-random": "~12.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-web-browser": "~11.0.0",
+    "firebase": "9.6.11",
     "native-base": "^3.4.16",
     "react": "18.0.0",
     "react-dom": "^18.2.0",
