--- a/react-native-trash/package.json
+++ b/react-native-trash/package.json
@@ -16,6 +16,7 @@
     "expo": "~46.0.9",
     "expo-auth-session": "~3.7.1",
     "expo-camera": "~12.3.0",
+    "expo-location": "~14.3.0",
     "expo-random": "~12.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-web-browser": "~11.0.0",
